--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/styles/style.scss">
   <title>Walter White</title>
+  <!-- Model Information:
+  * title: Walter White 3D
+  * source: https://sketchfab.com/3d-models/walter-white-3d-102d2596c1544cc9933f005360a66144
+  * author: NxFinity (https://sketchfab.com/NxFinityAnimations)
+  
+  Model License:
+  * license type: CC-BY-4.0 (http://creativecommons.org/licenses/by/4.0/)
+  * requirements: Author must be credited. Commercial use is allowed. -->
+
 </head>
 
 <body>
   <canvas id="app"></canvas>
-  <audio src="./assets/better-call-saul.mp3" autoplay loop> </audio>
+  <audio style="width: 200px" src="./assets/better-call-saul.mp3" autoplay loop controls>
+  </audio>
   <script type="module" src="/main.js"></script>
 </body>
 
