--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/styles/style.scss">
+  <script type="module" src="/main.js" defer></script>
   <title>Walter White</title>
   <!-- Model Information:
   * title: Walter White 3D
@@ -20,9 +21,9 @@
 
 <body>
   <canvas id="app"></canvas>
-  <audio style="width: 200px" src="./assets/better-call-saul.mp3" autoplay loop controls>
+  <audio style="width: 200px" src="./better-call-saul.mp3" autoplay loop controls>
   </audio>
-  <script type="module" src="/main.js"></script>
+
 </body>
 
 </html>
